# autoware.ai

./: .gitignore
src/autoware/common/amathutils_lib/src/: kalman_filter.cpp
src/autoware/common/libvectormap/src/: vector_map.cpp
src/autoware/core_perception/autoware_connector/include/: can_vehicle_info.h
src/autoware/core_perception/lidar_apollo_cnn_seg_detect/include/: cnn_segmentation.h
src/autoware/core_perception/lidar_apollo_cnn_seg_detect/nodes/: cnn_segmentation.cpp  lidar_apollo_cnn_seg_detect_node.cpp
src/autoware/core_perception/lidar_euclidean_cluster_detect/: README.md
src/autoware/core_perception/lidar_euclidean_cluster_detect/include/: cluster.h  gencolors.cpp
src/autoware/core_perception/lidar_fake_perception/include/: lidar_fake_perception.h
src/autoware/core_perception/lidar_fake_perception/nodes/: lidar_fake_perception.cpp  lidar_fake_perception_node.cpp
src/autoware/core_perception/lidar_shape_estimation/src/: main.cpp  node.cpp  shape_estimator.cpp
src/autoware/core_perception/naive_motion_predict/include/: naive_motion_predict.h
src/autoware/core_perception/ndt_cpu/src/: NormalDistributionsTransform.cpp  Octree.cpp  Registration.cpp  VoxelGrid.cpp
src/autoware/core_perception/obj_db/include/: obj_db.h
src/autoware/core_perception/pcl_omp_registration/src/: ndt.cpp
src/autoware/core_perception/range_vision_fusion/: CMakeLists.txt
src/autoware/core_perception/road_occupancy_processor/: README.md
src/autoware/core_perception/roi_object_filter/: CMakeLists.txt
src/autoware/core_planning/state_machine_lib/: CMakeLists.txt
(+48 files in other folders)
